syntax = "proto3";

package user;

option go_package = "github.com/ikadgzl/inventory/common/proto/user";

service UserService {
  rpc CreateUser(CreateUserRequest) returns (CreateUserResponse) {}
  rpc ListUsers(ListUsersRequest) returns (ListUsersResponse) {}
  rpc GetUser(GetUserRequest) returns (GetUserResponse) {}
  rpc UpdateUser(UpdateUserRequest) returns (UpdateUserResponse) {}
  rpc DeleteUser(DeleteUserRequest) returns (DeleteUserResponse) {}
}

message CreateUserRequest {
  string name = 1;
  string email = 2;
  string password = 3;
}

message CreateUserResponse {
  bool success = 1;
}

message ListUsersRequest {}

message ListUsersResponse {
  repeated GetUserResponse users = 1;
}

message GetUserRequest {
  string id = 1;
}

message GetUserResponse {
  string id = 1;
  string name = 2;
  string email = 3;
}

message UpdateUserRequest {
  string id = 1;
  string name = 2;
  string email = 3;
  string password = 4;
}

message UpdateUserResponse {
  bool success = 1;
}

message DeleteUserRequest {
  string id = 1;
}

message DeleteUserResponse {
  bool success = 1;
}